# programisto

./: .flake8  .gitignore  .isort.cfg  .pylintrc  MEMORY.md  README.md  __init__.py  config.py  plan.md  programisto-config.yaml  programisto.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
.claude/skills/: SGR-SKILL.md
.github/workflows/: ci.yml
.programisto/: scan_cache.json
.pytest_cache/v/cache/: lastfailed  nodeids
admin/: __init__.py  commands.py
analyzer/: __init__.py  log_analyzer.py
assistant/: __init__.py  main.py
context/: __init__.py  prompts.py
foils/: __init__.py  generator.py
harness/: __init__.py  generator.py
llm/: client.py
new-project/: PROJECT_CONTEXT.md  programisto-config.yaml
new-project/skills_catalog/: skills.json
scanner/: __init__.py  project_scanner.py
skills/: catalog.py  selector.py
skills_catalog/: __init__.py  skills.json  skills_index.json
tests/: __init__.py  conftest.py
tests/fixtures/: conftest.py  mock_llm.py  sample_project.py  sample_skills.py
tests/integration/: test_end_to_end.py  test_multi_agent.py  test_skill_catalog.py
tests/unit/: test_applier.py  test_config_generator.py  test_indexer.py  test_llm_gateway.py  test_log_analyzer.py  test_recommender.py  test_scanner.py
tools/: __init__.py  cli_support.py
utils/: testing.py
